--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,16 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  print_hello:
+    docker:
+      -image: circleci/node:13.8.0.
+    steps:
+      command: "echo hello"
+  print_world:
+    docker:
+      -image: circleci/node:13.8.0.
+    steps:
+      command: "echo world"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +34,8 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+  print-hello-workflow:
+    jobs:
+      - print-hello
+      - print-world:
+        requires: print-hello
