--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,12 @@ jobs:
     docker:
       -image: circleci/node:13.8.0.
     steps:
-      command: "echo hello"
+      command: echo hello
   print_world:
     docker:
       -image: circleci/node:13.8.0.
     steps:
-      command: "echo world"
+      command: echo world
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
